[package]
name = "vroom"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = false
panic = "abort"

[dependencies]
avr-device = { version = "0.3", features = ["atmega1284p"] }
atmega-hal = { git = "https://github.com/icanwalkonwater/avr-hal.git", features = ["rt", "atmega1284p"] }
avr-hal-generic = { git = "https://github.com/icanwalkonwater/avr-hal.git" }
ufmt = "0.2"
